--- a/springboot-mail/src/main/resources/application.properties
+++ b/springboot-mail/src/main/resources/application.properties
@@ -6,9 +6,9 @@ spring.mail.default-encoding=UTF-8
 #（如果是其他邮箱，就改成对应的主机地址）
 spring.mail.host=smtp.qq.com
 #发送方邮件名（填写我们的账号）
-spring.mail.username=
+spring.mail.username=huanzi.qch@qq.com
 #授权码（填写我们的密码）
-spring.mail.password=
+spring.mail.password=ywcxvvxxintebche
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 spring.mail.properties.mail.smtp.starttls.required=true
