SpringBoot系列——Swagger2之Swagger UI，API实时接口文档

--- a/springboot-swagger2/pom.xml
+++ b/springboot-swagger2/pom.xml
@@ -5,7 +5,7 @@
     <artifactId>springboot-swagger2</artifactId>
     <version>0.0.1</version>
     <name>springboot-swagger2</name>
-    <description>SpringBoot系列——Swagger2</description>
+    <description>SpringBoot系列——Swagger2之Swagger UI，API实时接口文档</description>
 
     <!--继承父类-->
     <parent>
@@ -15,16 +15,16 @@
     </parent>
 
     <dependencies>
-        <!-- swagger2 API接口-->
+        <!-- Swagger UI API接口-->
         <dependency>
             <groupId>io.springfox</groupId>
             <artifactId>springfox-swagger2</artifactId>
-            <version>2.7.0</version>
+            <version>2.9.2</version>
         </dependency>
         <dependency>
             <groupId>io.springfox</groupId>
             <artifactId>springfox-swagger-ui</artifactId>
-            <version>2.7.0</version>
+            <version>2.9.2</version>
         </dependency>
     </dependencies>
 
