1、新增按钮切换模式；

--- a/springboot-uniapp-mui/src/main/resources/application.properties
+++ b/springboot-uniapp-mui/src/main/resources/application.properties
@@ -7,3 +7,6 @@ spring.thymeleaf.prefix=classpath:/view/
 # AOP
 spring.aop.auto=true
 spring.aop.proxy-target-class=true
+
+#底部按钮切换模式：1 切换立即加载初始url  2 切换仅回显页面，在当前页面点击才加载
+huanzi.buttom.switch.mode=2
