1、优化tab页切换效果，实现过渡动画，而不是直接切换； 2、同tab页中，div窗体切换效果实现； 3、新增自定义键盘（来自大佬的开源组件分享：https://www.jianshu.com/p/cb21ca8786a4，不支持中文），主要用于输入密码等对安全行为要求较高的动作

--- a/springboot-uniapp-mui/src/main/resources/application.properties
+++ b/springboot-uniapp-mui/src/main/resources/application.properties
@@ -11,4 +11,4 @@ spring.aop.proxy-target-class=true
 #底部按钮切换模式：1 切换立即加载初始url  2 切换仅回显页面，在当前页面点击才加载
 huanzi.buttom.switch.mode=2
 #底部按钮统一配置
-huanzi.buttom.list=[{\"text\":\"mui原生\",\"icon\":\"mui-icon-phone\",\"url\":\"/muiwrapper/muiDialog\"},{\"text\":\"自定义封装\",\"icon\":\"mui-icon-email\",\"url\":\"/muiwrapper/dialog\"},{\"text\":\"头尾操作\",\"icon\":\"mui-icon-chatbubble\",\"url\":\"/muiwrapper/test3\"},{\"text\":\"页面4\",\"icon\":\"mui-icon-weixin\",\"url\":\"/muiwrapper/test4\"}]
+huanzi.buttom.list=[{\"text\":\"mui原生\",\"icon\":\"mui-icon-phone\",\"url\":\"/muiwrapper/muiDialog\"},{\"text\":\"自定义封装\",\"icon\":\"mui-icon-email\",\"url\":\"/muiwrapper/dialog\"},{\"text\":\"头尾操作\",\"icon\":\"mui-icon-chatbubble\",\"url\":\"/muiwrapper/test3\"},{\"text\":\"页面切换\",\"icon\":\"mui-icon-weixin\",\"url\":\"/muiwrapper/test4\"}]
