配置内置Tomcat请求日志

--- a/springboot-logback/src/main/resources/application.properties
+++ b/springboot-logback/src/main/resources/application.properties
@@ -5,8 +5,16 @@ spring.profiles.active=dev
 #修改thymeleaf访问根路径
 spring.thymeleaf.prefix=classpath:/view/
 
-#简单配置
-#logging.path=${user.home}/log/%d{yyyyMMdd}
-#logging.file=${spring.application.name}.log
-#logging.level.root=info
+#logback日志配置
 #logging.config=classpath:logback-spring.xml
+
+#开启内置Tomcat请求日志 access.log
+server.tomcat.accesslog.enabled=true
+#日志格式
+server.tomcat.accesslog.pattern=%h %l %u %t "%r" %s %b
+#日志输出目录
+server.tomcat.accesslog.directory=${user.home}/log/accesslog/${spring.application.name}
+#日志文件名
+server.tomcat.accesslog.prefix=access_log
+server.tomcat.accesslog.file-date-format=_yyyy-MM-dd
+server.tomcat.accesslog.suffix=.log
