配置文件统一改成utf-8格式；

--- a/springboot-https/src/main/resources/application.properties
+++ b/springboot-https/src/main/resources/application.properties
@@ -1,15 +1,15 @@
-#httpsÄ¬ÈÏ¶Ë¿Ú£º443£¬httpÄ¬ÈÏ¶Ë¿Ú£º80
+#httpsé»˜è®¤ç«¯å£ï¼š443ï¼Œhttpé»˜è®¤ç«¯å£ï¼š80
 server.port=443
 server.http-port=80
 
-#¿ªÆôhttps£¬ÅäÖÃ¸úÖ¤ÊéÒ»Ò»¶ÔÓ¦
+#å¼€å¯httpsï¼Œé…ç½®è·Ÿè¯ä¹¦ä¸€ä¸€å¯¹åº”
 server.ssl.enabled=true
-#Ö¸¶¨Ö¤Êé
+#æŒ‡å®šè¯ä¹¦
 server.ssl.key-store=classpath:tomcat_https.keystore
 server.ssl.key-store-type=JKS
-#±ğÃû
+#åˆ«å
 server.ssl.key-alias=tomcat_https
-#ÃÜÂë
+#å¯†ç 
 server.ssl.key-password=123456
 server.ssl.key-store-password=123456
 
