--- a/springboot-jackson/src/main/resources/application.properties
+++ b/springboot-jackson/src/main/resources/application.properties
@@ -3,10 +3,10 @@ spring.application.name=springboot-jackson
 
 logging.level.root=debug
 
-#È«¾ÖÈÕÆÚ¸ñÊ½»¯´¦Àí
+#å…¨å±€æ—¥æœŸæ ¼å¼åŒ–å¤„ç†
 
-#MVC½Ó²ÎÊ±£¬ÈÕÆÚ´¦Àí
+#MVCæ¥å‚æ—¶ï¼Œæ—¥æœŸå¤„ç†
 spring.mvc.date-format=yyyy-MM-dd HH:mm:ss
 
-#JacksonĞòÁĞ»¯¡¢·´ĞòÁĞ»¯Ê±£¬ÈÕÆÚ´¦Àí
+#Jacksonåºåˆ—åŒ–ã€ååºåˆ—åŒ–æ—¶ï¼Œæ—¥æœŸå¤„ç†
 spring.jackson.date-format=yyyy-MM-dd HH:mm:ss
