--- a/springboot-logback/src/main/resources/application.properties
+++ b/springboot-logback/src/main/resources/application.properties
@@ -2,19 +2,19 @@ server.port=10089
 spring.application.name=springboot-logback
 spring.profiles.active=dev
 
-#ĞŞ¸Äthymeleaf·ÃÎÊ¸ùÂ·¾¶
+#ä¿®æ”¹thymeleafè®¿é—®æ ¹è·¯å¾„
 spring.thymeleaf.prefix=classpath:/view/
 
-#logbackÈÕÖ¾ÅäÖÃ
+#logbackæ—¥å¿—é…ç½®
 #logging.config=classpath:logback-spring.xml
 
-#¿ªÆôÄÚÖÃTomcatÇëÇóÈÕÖ¾ access.log
+#å¼€å¯å†…ç½®Tomcatè¯·æ±‚æ—¥å¿— access.log
 server.tomcat.accesslog.enabled=true
-#ÈÕÖ¾¸ñÊ½
+#æ—¥å¿—æ ¼å¼
 server.tomcat.accesslog.pattern=%h %l %u %t "%r" %s %b
-#ÈÕÖ¾Êä³öÄ¿Â¼
+#æ—¥å¿—è¾“å‡ºç›®å½•
 server.tomcat.accesslog.directory=${user.home}/log/accesslog/${spring.application.name}
-#ÈÕÖ¾ÎÄ¼şÃû
+#æ—¥å¿—æ–‡ä»¶å
 server.tomcat.accesslog.prefix=access_log
 server.tomcat.accesslog.file-date-format=_yyyy-MM-dd
 server.tomcat.accesslog.suffix=.log
