--- a/springboot-uniapp-mui/src/main/resources/application.properties
+++ b/springboot-uniapp-mui/src/main/resources/application.properties
@@ -1,14 +1,14 @@
 server.port=10101
 spring.application.name=springboot-uniapp-mui
 
-#ĞŞ¸Äthymeleaf·ÃÎÊ¸ùÂ·¾¶
+#ä¿®æ”¹thymeleafè®¿é—®æ ¹è·¯å¾„
 spring.thymeleaf.prefix=classpath:/view/
 
 # AOP
 spring.aop.auto=true
 spring.aop.proxy-target-class=true
 
-#µ×²¿°´Å¥ÇĞ»»Ä£Ê½£º1 ÇĞ»»Á¢¼´¼ÓÔØ³õÊ¼url  2 ÇĞ»»½ö»ØÏÔÒ³Ãæ£¬ÔÚµ±Ç°Ò³Ãæµã»÷²Å¼ÓÔØ
+#åº•éƒ¨æŒ‰é’®åˆ‡æ¢æ¨¡å¼ï¼š1 åˆ‡æ¢ç«‹å³åŠ è½½åˆå§‹url  2 åˆ‡æ¢ä»…å›æ˜¾é¡µé¢ï¼Œåœ¨å½“å‰é¡µé¢ç‚¹å‡»æ‰åŠ è½½
 huanzi.buttom.switch.mode=2
-#µ×²¿°´Å¥Í³Ò»ÅäÖÃ
-huanzi.buttom.list=[{\"text\":\"muiÔ­Éú\",\"icon\":\"mui-icon-phone\",\"url\":\"/muiwrapper/muiDialog\"},{\"text\":\"×Ô¶¨Òå·â×°\",\"icon\":\"mui-icon-email\",\"url\":\"/muiwrapper/dialog\"},{\"text\":\"Í·Î²²Ù×÷\",\"icon\":\"mui-icon-chatbubble\",\"url\":\"/muiwrapper/test3\"},{\"text\":\"Ò³ÃæÇĞ»»\",\"icon\":\"mui-icon-weixin\",\"url\":\"/muiwrapper/test4\"}]
+#åº•éƒ¨æŒ‰é’®ç»Ÿä¸€é…ç½®
+huanzi.buttom.list=[{\"text\":\"muiÔ­ï¿½ï¿½\",\"icon\":\"mui-icon-phone\",\"url\":\"/muiwrapper/muiDialog\"},{\"text\":\"ï¿½Ô¶ï¿½ï¿½ï¿½ï¿½×°\",\"icon\":\"mui-icon-email\",\"url\":\"/muiwrapper/dialog\"},{\"text\":\"Í·Î²ï¿½ï¿½ï¿½ï¿½\",\"icon\":\"mui-icon-chatbubble\",\"url\":\"/muiwrapper/test3\"},{\"text\":\"Ò³ï¿½ï¿½ï¿½Ğ»ï¿½\",\"icon\":\"mui-icon-weixin\",\"url\":\"/muiwrapper/test4\"}]
