--- a/springboot-websocket/src/main/resources/application.properties
+++ b/springboot-websocket/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 server.port=10092
 spring.application.name=springboot-websocket
 
-#ÐÞ¸Äthymeleaf·ÃÎÊ¸ùÂ·¾¶
+#ä¿®æ”¹thymeleafè®¿é—®æ ¹è·¯å¾„
 spring.thymeleaf.prefix=classpath:/view/
