--- a/springboot-async/src/main/resources/application.properties
+++ b/springboot-async/src/main/resources/application.properties
@@ -1,11 +1,11 @@
 server.port=10097
 spring.application.name=springboot-async
 
-#Êı¾İ¿âÏà¹Ø
+#æ•°æ®åº“ç›¸å…³
 spring.datasource.url=jdbc:mysql://localhost:3306/test?serverTimezone=GMT%2B8&characterEncoding=utf-8
 spring.datasource.username=root
 spring.datasource.password=123456
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 
-#ĞŞ¸ÄÈÕÖ¾µÇ¼Ç£¬·½±ãµ÷ÊÔ
+#ä¿®æ”¹æ—¥å¿—ç™»è®°ï¼Œæ–¹ä¾¿è°ƒè¯•
 #logging.level.root=debug
