--- a/springboot-cors/src/main/resources/application.properties
+++ b/springboot-cors/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 server.port=10095
 spring.application.name=springboot-cors
 
-#ÆôÓÃ¸²¸ÇÄ¬ÈÏbean
+#è¦†ç›–ä¹‹å‰ç›¸åŒåç§°çš„bean
 spring.main.allow-bean-definition-overriding=true
