--- a/springboot-filter/src/main/resources/application.properties
+++ b/springboot-filter/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 server.port=10098
 spring.application.name=springboot-filter
 
-#ÆôÓÃ¸²¸ÇÍ¬Ãûbean
+#è¦†ç›–ä¹‹å‰ç›¸åŒåç§°çš„bean
 spring.main.allow-bean-definition-overriding=true
