--- a/springboot-i18n/src/main/resources/application.properties
+++ b/springboot-i18n/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 server.port=10087
 spring.application.name=springboot-i18n
 
-#Ö¸¶¨¹ú¼Ê»¯ÎÄ¼şÂ·¾¶
+#æŒ‡å®šå›½é™…åŒ–æ–‡ä»¶è·¯å¾„
 spring.messages.basename=static/i18n/messages
-#ĞŞ¸Äthymeleaf·ÃÎÊ¸ùÂ·¾¶
+#ä¿®æ”¹thymeleafè®¿é—®æ ¹è·¯å¾„
 spring.thymeleaf.prefix=classpath:/view/
