--- a/springboot-mail/src/main/resources/application.properties
+++ b/springboot-mail/src/main/resources/application.properties
@@ -3,11 +3,11 @@ spring.application.name=springboot-mail
 
 # Email (MailProperties)
 spring.mail.default-encoding=UTF-8
-#£¨Èç¹ûÊÇÆäËûÓÊÏä£¬¾Í¸Ä³É¶ÔÓ¦µÄÖ÷»úµØÖ·£©
+#ï¼ˆå¦‚æœæ˜¯å…¶ä»–é‚®ç®±ï¼Œå°±æ”¹æˆå¯¹åº”çš„ä¸»æœºåœ°å€ï¼‰
 spring.mail.host=smtp.qq.com
-#·¢ËÍ·½ÓÊ¼şÃû£¨ÌîĞ´ÎÒÃÇµÄÕËºÅ£©
+#å‘é€æ–¹é‚®ä»¶åï¼ˆå¡«å†™æˆ‘ä»¬çš„è´¦å·ï¼‰
 spring.mail.username=
-#ÊÚÈ¨Âë£¨ÌîĞ´ÎÒÃÇµÄÃÜÂë£©
+#æˆæƒç ï¼ˆå¡«å†™æˆ‘ä»¬çš„å¯†ç ï¼‰
 spring.mail.password=
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
