--- a/springboot-mybatis-plus/src/main/resources/application.properties
+++ b/springboot-mybatis-plus/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 server.port=10102
 spring.application.name=springboot-mybatis-plus
 
-#ÐÞ¸Äthymeleaf·ÃÎÊ¸ùÂ·¾¶
+#ä¿®æ”¹thymeleafè®¿é—®æ ¹è·¯å¾„
 spring.thymeleaf.prefix=classpath:/view/
