--- a/springboot-activiti7/pom.xml
+++ b/springboot-activiti7/pom.xml
@@ -14,17 +14,21 @@
         <version>1.0.0</version>
     </parent>
 
+    <properties>
+        <activiti.version>7.1.0.M5</activiti.version>
+    </properties>
+
     <dependencies>
         <!-- activiti -->
         <dependency>
             <groupId>org.activiti</groupId>
             <artifactId>activiti-spring-boot-starter</artifactId>
-            <version>7.1.0.M5</version>
+            <version>${activiti.version}</version>
         </dependency>
         <dependency>
             <groupId>org.activiti</groupId>
             <artifactId>activiti-image-generator</artifactId>
-            <version>7.1.0.M5</version>
+            <version>${activiti.version}</version>
         </dependency>
 
         <!--添加MySQL驱动依赖 -->
