1、SpringBoot系列——动态定时任务;

--- a/springboot-timer/pom.xml
+++ b/springboot-timer/pom.xml
@@ -15,7 +15,17 @@
     </parent>
 
     <dependencies>
+        <!--添加springdata-jpa依赖 -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-jpa</artifactId>
+        </dependency>
 
+        <!--添加MySQL驱动依赖 -->
+        <dependency>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+        </dependency>
     </dependencies>
 
     <build>
