1、springboot-admin：查看被监控的应用的服务日志（实时刷新）。

--- a/springboot-admin-client/src/main/resources/application.properties
+++ b/springboot-admin-client/src/main/resources/application.properties
@@ -6,6 +6,9 @@ info.version=1.0.0
 server.port=10011
 spring.application.name=springboot-admin-client
 
+#配置文件分支选择
+spring.profiles.active=dev
+
 #覆盖之前相同名称的bean
 spring.main.allow-bean-definition-overriding=true
 
@@ -20,6 +23,13 @@ management.endpoint.shutdown.enabled=true
 
 #显示db、redis、rabbti连接情况等
 management.endpoint.health.show-details=always
+
+#可在线查看日志，PS：好像不能按日期来存放了，直接指定一个死位置
+log-file-path=${user.home}/log/20210812/${spring.application.name}.log
+management.endpoint.logfile.enabled=true
+#生成日志的路径跟暴露给服务端的路径要一致
+management.endpoint.logfile.external-file=${log-file-path}
+logging.file=${log-file-path}
 
 #公开所有端点web接口
 management.endpoints.web.exposure.include=*
