1、解决配置https后，启动总是报端口被占用的问题；

--- a/springboot-https/src/main/resources/application.properties
+++ b/springboot-https/src/main/resources/application.properties
@@ -7,10 +7,10 @@ server.ssl.enabled=true
 #指定证书
 server.ssl.key-store=classpath:tomcat_https.keystore
 server.ssl.key-store-type=JKS
-#别名
-server.ssl.key-alias=tomcat_https
+#别名，启动总是报端口被占用，注释别名
+#server.ssl.key-alias=tomcat_https
 #密码
-server.ssl.key-password=123456
+#server.ssl.key-password=123456
 server.ssl.key-store-password=123456
 
 spring.application.name=springboot-https
