1、统一异常处理返回格式调整：ajax请求返回json格式数据，其他情况下跳转自定义error页面

--- a/springboot-exceptionhandler/pom.xml
+++ b/springboot-exceptionhandler/pom.xml
@@ -15,7 +15,11 @@
     </parent>
 
     <dependencies>
-
+        <!-- thymeleaf模板 -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-thymeleaf</artifactId>
+        </dependency>
     </dependencies>
 
     <build>
