--- a/springboot-exceptionhandler/src/main/resources/application.properties
+++ b/springboot-exceptionhandler/src/main/resources/application.properties
@@ -1,2 +1,5 @@
 server.port=10010
 spring.application.name=springboot-exceptionhandler
+
+spring.profiles.active=dev
+spring.thymeleaf.prefix=classpath:/view/
