--- a/springboot-mybatis-plus/src/main/resources/application.properties
+++ b/springboot-mybatis-plus/src/main/resources/application.properties
@@ -1,5 +1,8 @@
-server.port=10102
+server.port=10010
 spring.application.name=springboot-mybatis-plus
 
 #修改thymeleaf访问根路径
 spring.thymeleaf.prefix=classpath:/view/
+
+#MP控制台打印sql
+mybatis-plus.configuration.log-impl=org.apache.ibatis.logging.stdout.StdOutImpl
