1、新增附件路径映射配置，映射后可通过URL直接访问附件；

--- a/springboot-filesupload/src/main/resources/application.properties
+++ b/springboot-filesupload/src/main/resources/application.properties
@@ -5,8 +5,11 @@ spring.application.name=springboot-filesupload
 spring.thymeleaf.prefix=classpath:/view/
 
 #单个文件大小
-string.http.multipart.max-file-size=5Mb
-string.servlet.multipart.max-file-size=5Mb
+string.http.multipart.max-file-size=50Mb
+string.servlet.multipart.max-file-size=50Mb
 #总大小
-string.http.multipart.max-request-size=50Mb
-string.servlet.multipart.max-request-size=50Mb
+string.http.multipart.max-request-size=500Mb
+string.servlet.multipart.max-request-size=500Mb
+
+#附件存储路径
+file.upload-path=E:\\fj\\
