1、附件模块，新增常见文件上传、下载、查看例子；

--- a/springboot-filesupload/src/main/resources/application.properties
+++ b/springboot-filesupload/src/main/resources/application.properties
@@ -5,11 +5,9 @@ spring.application.name=springboot-filesupload
 spring.thymeleaf.prefix=classpath:/view/
 
 #单个文件大小
-string.http.multipart.max-file-size=50Mb
-string.servlet.multipart.max-file-size=50Mb
+spring.servlet.multipart.max-file-size=50MB
 #总大小
-string.http.multipart.max-request-size=500Mb
-string.servlet.multipart.max-request-size=500Mb
+spring.servlet.multipart.max-request-size=500MB
 
 #附件存储路径
 file.upload-path=E:\\fj\\
